--- a/battles.html
+++ b/battles.html
@@ -555,6 +555,7 @@ async function processReferralCommission(winnerPhone, winAmount) {
     }
     return user;
   });
+      document.getElementById('parda').classList.remove('active');
 }
 
     async function joinBattle(battleId) {
